# TWRAP

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-mac.yml  build.yml  doc.yml  test-mac.yml  test.yml
include/: TWrap.h
include/TWrap/: TWrap.h  TWrapException.h  utility.h
src/: CMakeLists.txt  TWrap.cpp  template.cpp  template_BSMPT.cpp
src/example/: example.cpp
tests/: CMakeLists.txt  Test-general.cpp  catch.cpp
tools/cmake/: TWrapConfig.cmake.in
